JSON file now writes to index

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         </div>
         <div class="col-sm-9 visible" id="blog-field">
-          <article>
+          <!-- <article>
             <h2 class="title">T is for Technology</h2>
             <p class="article">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -47,7 +47,7 @@
               cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
               proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
               <p class="author-date">By Jeremy Wells on July 5, 2017</p>
-          </article>
+          </article> -->
         </div>
         <div class="col-sm-3" id="sidebar-field">
           <h4>Past Articles:</h4>
@@ -65,5 +65,6 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/ui.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
   </body>
 </html>
