initial file setup and updates

--- a/index.html
+++ b/index.html
@@ -51,11 +51,7 @@
         </div>
         <div class="col-sm-3" id="sidebar-field">
           <h4>Past Articles:</h4>
-          <ul class="sidebar" id="sidebar-list">
-            <li><a href="#">July 5, 2017</a></li>
-            <li><a href="#">July 17, 2017</a></li>
-            <li><a href="#">July 27, 2017</a></li>
-          </ul>
+          <ul class="sidebar" id="sidebar-list"></ul>
         </div>
       </div>
     </div>
