--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <div class="container">
       <nav>
-        <h1>Jeremy's Blog Version 2</h1>
+        <h1>Jeremy's Blog Version 3</h1>
         <ul class="nav">
           <li class="active" id="blog-list"><a href="#">Blog List</a></li>
           <li id="add-blog-entry"><a href="#">Add Blog Entry</a></li>
@@ -60,7 +60,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="js/ui.js"></script>
-    <script type="text/javascript" src="js/main.js"></script>
+    <script src="dist/app.js"></script>
   </body>
 </html>
